Devirtulize Double
(blows up GWT compiler)

Change-Id: Ic5aec1db9f54f088297b09ee0b166abbd57de136